[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bytes = "1.6.0"
dashmap = "5.5.3"
enum_dispatch = "0.3.13"
futures = { version = "0.3.30", default-features = false }
lazy_static = "1.4.0"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread", "net", "io-util"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
